--- a/behaviortracker/app/components/SimpleSelect.css
+++ b/behaviortracker/app/components/SimpleSelect.css
@@ -26,6 +26,20 @@
   color: #c4c2bc;
 }
 
+.btcs-select-list.drop-down {
+  top: 100%;
+  bottom: auto;
+  margin-top: 0.3rem;
+  margin-bottom: 0;
+}
+
+.btcs-select-list.drop-up {
+  top: auto;
+  bottom: 100%;
+  margin-top: 0;
+  margin-bottom: 0.3rem;
+}
+
 .btcs-select-list {
   position: absolute;
   z-index: 20;
